# test

./: .gitignore  Makefile  README.md  eda.ipynb  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cleaning/: cleaning.ipynb  cleaning.py
eda/: README_DASHBOARD.md  dashboard.py  visualize.py
feature_engineering/: engineering.py  features.ipynb  pipeline.py  selection.py  transformations.py
modelling/: IMPROVEMENT_GUIDE.md  README_modelling.md  baseline.py  class_balancing.py  config.py  evaluate.py  train.py  train_enhanced.py  train_single.py
models/: best_model.pkl
scraper/: merge.ipynb  merge.py  scraper.ipynb
tests/: conftest.py  test_cleaning.py  test_features.py  test_merge.py  test_modelling.py  test_training.py
validation/: validation.ipynb  validation.py
validation_report/: validation_report_full.json
