[project]
name = "test"
version = "0.1.0"
description = "N/A"
authors = [
    {name = "Mohammed Elkhiat",email = "mohammed.khayyat02@eng-st.cu.edu.eg"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
