[project]
name = "test"
version = "0.1.0"
description = "N/A"
authors = [
    {name = "Mohammed Elkhiat",email = "mohammed.khayyat02@eng-st.cu.edu.eg"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.11,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
